--- a/style.css
+++ b/style.css
@@ -4,3 +4,39 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.header {
+  width: 100%;
+  height: 120px;
+  background-color: red;
+}
+
+.main-visual {
+  width: 100%;
+  height: 300px;
+  background-color: orange;
+}
+
+.main {
+  width: 100%;
+  height: 1400px;
+  background-color: green;
+}
+
+.footer {
+  width: 100%;
+  height: 120px;
+  background-color: blue;
+}
+
+.header-top {
+  width: 100%;
+  height: 70px;
+  background: hotpink;
+}
+
+.header-bottom {
+  width: 100%;
+  height: 50px;
+  background: pink;
+}
