--- a/style.css
+++ b/style.css
@@ -5,22 +5,24 @@
   box-sizing: border-box;
 }
 
-.header {
-  width: 100%;
-  height: 120px;
-  background-color: red;
+header {
+  width: 90%;
+  padding: 15px;
+  margin: 0 auto;
+}
+
+header .heaging {
+  font-size: 32px;
 }
 
 .main-visual {
   width: 100%;
   height: 300px;
-  background-color: orange;
 }
 
 .main-visual-content {
   width: 350px;
   height: 300px;
-  background-color: gold;
 }
 
 .main {
@@ -30,32 +32,12 @@
   margin: 0 auto;
 }
 
-.footer {
-  width: 100%;
-  height: 120px;
-  background-color: blue;
-}
-
-.header-top {
-  width: 100%;
-  height: 70px;
-  background: hotpink;
-}
-
-.header-bottom {
-  width: 100%;
-  height: 50px;
-  background: pink;
-}
-
 .blog {
   width: 600px;
   height: 1400px;
-  background-color: limegreen;
 }
 
 .sidebar {
   width: 240px;
   height: 1400px;
-  background-color: palegreen;
 }
