--- a/2-5　演習問題.css
+++ b/2-5　演習問題.css
@@ -10,3 +10,90 @@ header {
   text-align: center;
   margin: 20px 0;
 }
+
+.list {
+  font-size: 0px;
+  text-align: center;
+  padding: 15px 20px;
+  border-top: 3px solid #a9a9a9;
+  border-bottom: 3px solid #a9a9a9;
+}
+
+.list-item {
+  font-size: 30px;
+  display: inline;
+  margin: 15px 20px;
+}
+
+.main {
+  width: 800px;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 50px auto;
+}
+
+.content1,
+.content2,
+.content3,
+.content4,
+.content5,
+.content6,
+.content7,
+.content8,
+.content9,
+.content10,
+.content11,
+.content12 {
+  width: 200px;
+  height: 200px;
+}
+
+.content1 {
+  background-color: #e6ffe9;
+}
+.content2 {
+  background-color: #cbffd3;
+}
+.content3 {
+  background-color: #aeffbd;
+}
+.content4 {
+  background-color: #93ffab;
+}
+.content5 {
+  background-color: #f3ffd8;
+}
+.content6 {
+  background-color: #edffbe;
+}
+.content7 {
+  background-color: #e9ffa5;
+}
+.content8 {
+  background-color: #e4ff8b;
+}
+.content9 {
+  background-color: #d9e5ff;
+}
+.content10 {
+  background-color: #bad3ff;
+}
+.content11 {
+  background-color: #a4c6ff;
+}
+.content12 {
+  background-color: #8eb8ff;
+}
+
+footer {
+  text-align: center;
+  width: 100%;
+  height: 120px;
+  background-color: #696969;
+}
+footer p {
+  color: #d9e5ff;
+  line-height: 120px;
+}
