--- a/2-5　演習問題.css
+++ b/2-5　演習問題.css
@@ -4,8 +4,12 @@
   box-sizing: border-box;
 }
 
+a {
+  color: blue;
+}
+
 header {
-  font-size: 55px;
+  font-size: 30px;
   width: 100%;
   text-align: center;
   margin: 20px 0;
@@ -14,13 +18,15 @@ header {
 .list {
   font-size: 0px;
   text-align: center;
+  
+  color: blue;
   padding: 15px 20px;
-  border-top: 3px solid #a9a9a9;
-  border-bottom: 3px solid #a9a9a9;
+  border-top: 1px solid #a9a9a9;
+  border-bottom: 1px solid #a9a9a9;
 }
 
 .list-item {
-  font-size: 30px;
+  font-size: 10px;
   display: inline;
   margin: 15px 20px;
 }
