--- a/2-7演習問題.css
+++ b/2-7演習問題.css
@@ -4,3 +4,24 @@
   box-sizing: border-box;
 }
 
+header {
+  height: 400px;
+  background-image: url(img/mv2.jpg);
+  background-size: cover;
+  background-position: bottom;
+  display: flex;
+}
+
+.header-text {
+  font-size: 20px;
+  padding: 20px;
+}
+
+main {
+  text-align: center;
+}
+
+.text-img {
+  margin-top: 50px;
+  size: 80%;
+}
