--- a/2-7演習問題.css
+++ b/2-7演習問題.css
@@ -18,10 +18,19 @@ header {
 }
 
 main {
-  text-align: center;
+  width: 840px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 50px 0;
 }
 
 .text-img {
-  margin-top: 50px;
   size: 80%;
+}
+
+.border {
+  margin: 30px 0 30px 0;
+  border-style: 1px solid #bbbbbb;
 }
