--- a/style.css
+++ b/style.css
@@ -12,9 +12,15 @@ a {
 
 header {
   width: 90%;
-  padding: 15px;
+  padding: 15px 0;
   margin: 0 auto;
   text-align: center;
+  position: relative;
+}
+
+.social i {
+  display: inline-block;
+  margin-left: 20px;
 }
 
 header .heading {
